--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/hritiksantoshi/exam-portal/issues"
   },
-  "homepage": "https://github.com/hritiksantoshi/exam-portal#readme"
+  "homepage": "https://github.com/hritiksantoshi/exam-portal#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
+    "mongoose": "^6.4.0"
+  }
 }
