--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/hritiksantoshi/exam-portal/issues"
   },
-  "homepage": "https://github.com/hritiksantoshi/exam-portal#readme"
+  "homepage": "https://github.com/hritiksantoshi/exam-portal#readme",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  }
 }
