--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,5 @@
 PORT=8000
 JWTSECRETKEY='ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890'
+GRIDAPIKEY='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'
 
 
