--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hritiksantoshi/exam-portal.git"
+    "url": "git+https://github.com/kajlasanamdeep/EXAM_PORTAL.git/"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hritiksantoshi/exam-portal/issues"
+    "url": "https://github.com/kajlasanamdeep/EXAM_PORTAL.git/issues"
   },
-  "homepage": "https://github.com/hritiksantoshi/exam-portal#readme",
+  "homepage": "https://github.com/kajlasanamdeep/EXAM_PORTAL#readme",
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
@@ -29,7 +29,6 @@
     "get-days-to-go": "^7.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0",
-    "nodemailer": "^6.7.6"
+    "mongoose": "^6.4.0"
   }
 }
