--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kajlasanamdeep/EXAM_PORTAL.git/"
+    "url": "https://github.com/kajlasanamdeep/EXAM_PORTAL.git/"
   },
   "author": "",
   "license": "ISC",
