--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kajlasanamdeep/EXAM_PORTAL#readme",
   "dependencies": {
+    "node":"17.6.0",
     "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
