--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "get-days-to-go": "^7.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.0",
-    "nodemailer": "^6.7.6"
+    "mongoose": "^6.4.0"
   }
 }
